<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="add_call">Add Call</string>
    <string name="add_time">Add Time</string>
    <string name="address">Address</string>
    <string name="anon_placement">Anonymous Placements</string>
    <string name="app_name">ServiceDroid</string>
    <string name="awake">Awake!</string>
    <string name="backup">Backup</string>
    <string name="backup_success">Successfully backed up data to \"%s\" on your SD card.</string>
    <string name="bible">Bible</string>
    <string name="bible_studies">Bible Studies</string>
    <string name="bible_study">Bible Study</string>
	<string name="bible_teach">What Does the Bible Really Teach?</string>
    <string name="book">Book</string>
	<string name="books">Books</string>
	<string name="brochure">Brochure</string>
	<string name="brochures">Brochures</string>
    <string name="callbook">Call Book</string>
    <string name="cancel">Cancel</string>
    <string name="carry_over">Carried Over</string>
    <string-array name="changelog">
    	<item>Many views have been improved aesthetically and functionally.</item>
    	<item>Added a combination placement of Watchtower &amp; Awake.</item>
    	<item>Bible studies received a major change. Bible studies are now recorded when making a return visit.</item>
    	<item>Time Entries and Return Visits can have notes.</item>
    	<item>Backups will always use the SD card when available.</item>
    	<item>New translations: Italian (thanks to Stefano Rinolfi)</item>
    </string-array>
    <string name="combo">Watchtower &amp; Awake!</string>
    <string name="confirm">Save</string>
    <string name="comfort_brochure">When Someone You Love Dies</string>
    <string name="create_placement">Create Placement</string>
    <string name="date">Date</string>
    <string name="delete_call">Delete Call</string>
    <string name="delete_call_prompt">Would you like to delete all placements and visits associated with this call?</string>
    <string name="delete_call_title">Delete Related Data?</string>
    <string name="delete_call_prompt_yes">Delete Related Data</string>
    <string name="delete_call_prompt_no">Call Only</string>
    <string name="delete_placement">Delete Placement</string>
    <string name="delete_rv">Delete Visit</string>
    <string name="delete_time">Delete Time</string>
    <string name="directions">Directions</string>
    <string name="edit">Edit</string>
    <string name="email_hint">You can e-mail your service record by pressing you phone\'s MENU button.</string>
    <string name="enjoy_servicedroid">Enjoy ServiceDroid?</string>
    <string name="give_review"><![CDATA[Consider giving a nice <a href=\"market://details?id=com.monstarlab.servicedroid\">review</a>.]]></string>
    <string name="hours">Hours</string>
	<string name="hr">hr</string>
	<string name="hrs">hrs</string>
	<string name="is_bible_study">%s is now a bible study.</string>
	<string name="isnt_bible_study">%s is no longer a bible study.</string>
	<string name="issue">Issue</string>
	<string name="last_visited">Last Visited: %s</string>
	<string name="length">Time in Service</string>
	<string name="magazine">Magazine</string>
	<string name="magazines">Mags</string>
	<string name="make_return">Returned On</string>
	<string name="menu_sms">SMS</string>
	<string name="min">min</string>
	<string name="mins">mins</string>
	<string name="month">Month</string>
	<string name="monthly">Monthly</string>
	<string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
	<string name="name">Name</string>
	<string name="no">No</string>
	<string name="no_calls">This is the Call Book. All placements and return visits should be recorded on individual calls. The stats will keep count for you.</string>
	<string name="no_placements">Press MENU to record a placement or return visit.</string>
	<string name="no_time">Press MENU to record time for this month.</string>	
	<string name="notes">Notes</string>
    <string name="ok">Cool!</string>
    <string name="other">Other...</string>
    <string name="placement">Placement</string>
    <string name="require_brochure">What Does God Require of Us?</string>
    <string name="restore_failure">Contact the developer.</string>
    <string name="return_visit_success">You made a return visit on %s.</string>
    <string name="round_time_prompt">Would you like to round your time up, or carry over the extra minutes to the next month?</string>
	<string name="round_time_prompt_carry">Carry Over</string>
	<string name="round_time_prompt_round">Round Up</string>
    <string name="rv">Return Visit</string>
    <string name="rvs">Return Visits</string>
    <string name="send">Email</string>
	<string name="send_by">Send by...</string>
	<string name="send_reminder">Send in your Service Time</string>
	<string name="service_year">Service Year</string>
	<string name="service_time_for">Service Time for %s</string>
    <string name="sort">Sort</string>
    <string name="sorted_alpha">Alphabetically</string>
    <string name="sorted_time">Oldest Visit</string>
    <string name="start_time">Start Time</string>
    <string name="stats">Stats</string>
    <string name="stop_time">Stop Time</string>
    <string name="time">Time</string>
    <string name="time_due">Your time is due!</string>
	<string name="time_in_service">Time in service: %s</string>
	<string name="time_period_hint">Swipe left or right to change the time period.</string>
	<string name="timer_active">Service Timer Active</string>
    <string name="tips">Tips</string>
    <string name="watchtower">Watchtower</string>
    <string name="whats_new">What\'s New!</string>
	<string name="year">Year</string>
	<string name="yes">Yes</string>
</resources>
