<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">
   
	
	<EditText 
		android:hint="@string/name" 
		android:id="@+id/name" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:inputType="textPersonName|textCapWords" />
	
	<EditText 
		android:hint="@string/address" 
		android:id="@+id/address" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:inputType="textPostalAddress" />

	<View
		android:layout_width="fill_parent"
		android:id="@+id/divider"
		android:layout_height="1px"
		android:background="?android:attr/listDivider" />
		
	<EditText 
		android:hint="@string/notes" 
		android:id="@+id/notes" 
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		android:layout_weight="1" 
		android:gravity="top" 
		android:inputType="text|textMultiLine|textCapSentences|textAutoCorrect"/>
	
	<RelativeLayout android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:id="@+id/button_container">
		<Button android:id="@+id/confirm" 
		    android:text="@string/confirm"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true" />
			
		<Button android:id="@+id/cancel" 
		    android:text="@string/cancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true" />
	</RelativeLayout>

</LinearLayout>
