<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="wrap_content">

	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/date"
		android:textAppearance="?android:attr/textAppearanceLarge" />
	
	<DatePicker android:id="@+id/date" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:layout_gravity="center_horizontal"/>

	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/length"
		android:textAppearance="?android:attr/textAppearanceLarge" />
	
	<TimePicker android:id="@+id/length" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:layout_gravity="center_horizontal"/>
	
	<EditText android:id="@+id/notes"  
		android:hint="@string/notes"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:inputType="text|textAutoCorrect" />
	
	<RelativeLayout android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:id="@+id/button_container">


		<Button android:id="@+id/confirm" android:layout_height="wrap_content"
			android:text="@string/confirm" android:layout_width="wrap_content"
			android:layout_alignParentLeft="true" />


		<Button android:id="@+id/cancel" android:layout_height="wrap_content"
			android:text="@string/cancel" android:layout_width="wrap_content"
			android:layout_alignParentRight="true" />
	</RelativeLayout>

</LinearLayout>