<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_send"
        android:title="@string/send"
        android:actionProviderClass="com.actionbarsherlock.widget.ShareActionProvider"
        android:orderInCategory="1"
        android:showAsAction="always|withText" />
        
    <item android:id="@+id/menu_time_period"
        android:title="@string/service_year"
        android:icon="@drawable/menu_calendar"
        android:orderInCategory="2"
        android:showAsAction="ifRoom|withText" />
    
    <item android:id="@+id/menu_backup"
        android:title="@string/backup"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="3"
        android:showAsAction="never" />
</menu>
