<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="1dip"
		android:layout_weight="1"
		android:fillViewport="true">
		<LinearLayout android:orientation="vertical" 
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">
			
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:text="@string/date"
				android:textAppearance="?android:attr/textAppearanceLarge" />
			
			<Button android:id="@+id/date" android:text="@string/date"
				android:layout_width="fill_parent" android:layout_height="wrap_content" />
			
			<CheckBox android:id="@+id/is_bible_study"
		        android:layout_width="fill_parent"
		        android:layout_height="?android:attr/listPreferredItemHeight"
		        android:text="@string/bible_study" />
		    
		    <EditText android:id="@+id/notes"
		    	android:hint="@string/notes" 
		    	android:layout_width="fill_parent" 
				android:layout_height="fill_parent"
				android:layout_weight="1" 
				android:gravity="top" 
				android:inputType="text|textMultiLine|textCapSentences|textAutoCorrect"/>
				
		</LinearLayout>
	</ScrollView>

	<include android:id="@+id/footer_buttons" 
		layout="@layout/footer_buttons" />

</LinearLayout>