<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">

  <ScrollView
		android:layout_width="fill_parent"
		android:layout_height="1dip"
		android:layout_weight="1"
		android:fillViewport="true">
		<LinearLayout android:orientation="vertical" 
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:padding="10dip">
			
		  <TextView android:id="@+id/title"
		 			android:text="@string/magazine"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:padding="7dip"
		            android:textAppearance="?android:attr/textAppearanceLarge"
		        />
		   <Spinner 
		        android:id="@+id/magazine"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:prompt="@string/magazine"
		    />
		    
		    <TextView android:id="@+id/issue"
		    		android:text="@string/issue"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="5dip"
		            android:layout_marginRight="5dip"
		            android:padding="7dip"
		            android:textAppearance="?android:attr/textAppearanceLarge"
		        />
		    <LinearLayout android:orientation="horizontal"
		    	android:layout_height="wrap_content"
		    	android:layout_width="fill_parent">
			    <Spinner 
			        android:id="@+id/month"
			        android:layout_width="1dip"
			        android:layout_weight="3"
			        android:layout_height="wrap_content"
			        android:prompt="@string/month"
			    />
			    <Spinner 
			        android:id="@+id/year"
			        android:layout_width="1dip"
			        android:layout_weight="2"
			        android:layout_height="wrap_content"
			        android:prompt="@string/year"
			    />
		    </LinearLayout>
		  
		  <TextView
		    		android:text="@string/date"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="5dip"
		            android:layout_marginRight="5dip"
		            android:padding="7dip"
              android:textAppearance="?android:attr/textAppearanceLarge"
		        />
		        
		  <Button android:id="@+id/date" 
			    android:text="@string/date"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" />


            <TextView android:text="@string/quantity" android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip" android:padding="7dip" android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="decrementQuantity"
                    android:text="-"/>
                <EditText
                    android:id="@+id/quantity"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:numeric="integer"
                    android:layout_weight="1"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="incrementQuantity"
                    android:text="+"/>
            </LinearLayout>
		</LinearLayout>
	</ScrollView>
  
	<include android:id="@+id/footer_buttons" 
		layout="@layout/footer_buttons" />

</LinearLayout>
